[gd_scene load_steps=11 format=3 uid="uid://cad25ojl47q8"]

[ext_resource type="FontFile" uid="uid://r5ttqaxnuvgk" path="res://assets/MaldiniBold.ttf" id="1_4cjqx"]
[ext_resource type="Script" uid="uid://chnh885uoq1bu" path="res://scenes/game_over_menu.gd" id="1_k7vgk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hy06m"]
bg_color = Color(0, 0.239216, 0.305882, 1)
shadow_size = 5
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l65v3"]
bg_color = Color(0, 0.737255, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4ktg"]
bg_color = Color(0, 0.572549, 0.631373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8be6j"]
bg_color = Color(0, 0.611765, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwb3k"]
bg_color = Color(0, 0.239216, 0.305882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccgoi"]
bg_color = Color(0, 0.737255, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81acl"]
bg_color = Color(0, 0.572549, 0.631373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7u104"]
bg_color = Color(0, 0.611765, 0.172549, 1)

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_k7vgk")

[node name="GameOverPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hy06m")

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 75.0
offset_top = 120.0
offset_right = 325.0
offset_bottom = 183.0
theme_override_fonts/font = ExtResource("1_4cjqx")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_l65v3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u4ktg")
theme_override_styles/normal = SubResource("StyleBoxFlat_8be6j")
text = "Play Again"

[node name="LeaderboardButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 84.0
offset_top = 192.0
offset_right = 310.0
offset_bottom = 253.0
theme_override_fonts/font = ExtResource("1_4cjqx")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_l65v3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u4ktg")
theme_override_styles/normal = SubResource("StyleBoxFlat_8be6j")
text = "LEADERBOARD
"

[node name="ResultLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -106.0
offset_right = 133.5
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4cjqx")
theme_override_font_sizes/font_size = 50
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaderBoardPanel" type="Panel" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.054
anchor_right = 0.5
anchor_bottom = 0.054
offset_left = -205.0
offset_top = 74.28
offset_right = 220.0
offset_bottom = 621.28
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cwb3k")

[node name="Panel" type="Panel" parent="LeaderBoardPanel"]
layout_mode = 0
offset_left = 62.0
offset_top = 101.0
offset_right = 355.0
offset_bottom = 429.0

[node name="BackMenuButton" type="Button" parent="LeaderBoardPanel"]
offset_left = 79.0
offset_top = 462.0
offset_right = 320.0
offset_bottom = 514.0
theme_override_fonts/font = ExtResource("1_4cjqx")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_ccgoi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_81acl")
theme_override_styles/normal = SubResource("StyleBoxFlat_7u104")
text = "BACK
"

[node name="ResultLabel" type="Label" parent="LeaderBoardPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = -265.5
offset_right = 126.5
offset_bottom = -195.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4cjqx")
theme_override_font_sizes/font_size = 50
text = "LEADERBOARD"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GameOverPanel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverPanel/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="LeaderBoardPanel/BackMenuButton" to="." method="_on_backmenu_button_pressed"]
